# poetry_test

./: README.md  pyproject.toml  時系列テンプレート.xmind
document_by_drawio/: flow_pattern1.dio
poetry_test/pytest_test/: main.py  test_main.py
poetry_test/src/converter/: sample_pattern1.py
poetry_test/src/dataclass/: sample_user_class_by_function_import.py
poetry_test/src/def/: common_config.toml  config_logger.toml  config_logger.yaml  logging.ini  logging.toml
poetry_test/src/lib/: test_lib.py
poetry_test/src/lib/commol_utils/: UtilsDataFrameHelper.py  UtilsDateHelper.py  UtilsExcelReader.py  UtilsLoggingHelper.py  UtilsSqlite3.py  UtilsYamlloader.py  file_move.py  ibr_csv_reader.py  ibr_data_helper.py  ibr_date_helper.py  ibr_excel_helper.py  ibr_toml_loader.py
poetry_test/src/package/: Sample_with_Excel.py  create_new_featute.ipynb  delete_dataframe_by_condition.ipynb  enum_dictによるifネスト軽減.ipynb  update_dataframe_by_condition.ipynb  例外パターン.ipynb
poetry_test/src/validator/: field_validator.py  model_validator.py
poetry_test/test/: conftest.py  test_UtilsCSVReader.py  test_UtilsDataFrameHelper.py  test_UtilsDataHelper.py  test_UtilsDateHelper.py  test_UtilsExcelReader.py  test_UtilsSqltei3.py  test_UtilsYamlloader.py
poetry_test/test/ipynb/: logger_basicConfig.ipynb  logger_test.ipynb  tabulate.ipynb
