[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["satoshi <satoshi@kawagucchi.net>"]
readme = "README.md"
packages = [{include = "poetry_test"}]

[tool.poetry.dependencies]
python = "3.11.6"
requests = "^2.31.0"
numpy = "^1.26.2"
pandas = "^2.1.4"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
