[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["satoshi <satoshi@kawagucchi.net>"]
readme = "README.md"
packages = [{include = "poetry_test"}]

[tool.poetry.dependencies]
python = "3.11.6"
requests = "^2.31.0"
numpy = "^1.26.2"
pandas = "^2.1.4"
pydantic = "^2.5.2"
ruff = "^0.1.7"
logger = "^1.4"
logging = "^0.4.9.6"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

################################################################
# ruff
################################################################
[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
    "ALL", 
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "B904", # raise from err
    "D400", # 
    "D415", # 
    "TRY003", # 
    "TRY200", # 
    "EM102", # 
    "Q000", # 
]
fixable = ["ALL"]
target-version = "py311"

# Exclude a variety of commonly ignored directories.
exclude = [".venv", "venv"]

